and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

November 14th, 2014 M.Asai (run-V10-00-41)
- Fix Coverity defects related to keeping events.

November 8th, 2014 M.Asai (run-V10-00-39 -40)
- Further fix of logic at G4RunManager::RunTermination() for keeping
  events  

November 7th, 2014 A.Dotti (run-V10-00-38)
- Fix logic at G4RunManager::RunTermination() for keeping events  

November 6th, 2014 M.Asai (run-V10-00-37)
- Fix unnecessary print-out incorrectly added with run-V10-00-31.

November 6th, 2014 M.Asai (run-V10-00-36)
- In MT mode, a new option of setting random number seeds only once
  per run per worker thread is introduced. 

October 27th, 2014 M.Asai (run-V10-00-35)
- Introduced /run/useMaximumLogicalCores UI command.

October 24th, 2014 J.Apostolakis,A.Dotti (run-V10-00-34)
- Introduced workspace for physics list split-classes
- Improved workspace from particledefinition split-class
- Requires global-V10-00-40 and particles-V10-00-25

October 24th, 2014 M.Asai (run-V10-00-33)
- Fix cleaning up of kept events when Vis thread keeps events.

October 23rd, 2014 A.Dotti J.Apostolakis (run-V10-00-32)
- Enable use of G4ParticlesWorkspace. Requires particles-V10-00-24

October 17th, 2014 A.Dotti (run-V10-00-31)
- G4RunManagerKernel::RunTermination() workers do not
  call G4ProductionCutsTable::PhysicsTableUpdated()
- G4WorkerRunManager::TermianteEventLoop() implemented
  in workerd and avoid data-race on shared 
  resource fGeometryHasBeenDestroyed
- G4WorkerThread::UpdateGeometryAndPhysicsVectorFromMaster
  remove mechanism of copying pointer of region that is 
  not needed

October 14th, 2014 M.Asai (run-V10-00-30)