@@ -246,7 +246,7 @@ void* G4MTRunManagerKernel::StartThread(void* context)
       G4int numSelect = masterRM->GetNumberOfSelectEvents();
       if ( macroFile == "" || macroFile == " " )
       {
-          wrm->BeamOn(numevents,0,numSelect);
+          wrm->BeamOn(numevents);
       }
       else
       {
